--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
+<h2>First Work</h2>
+<p>Another One</p>
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to your first GitHub Pages website!</p>
